--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>
                         我是CHX。
                         <br> 一个高中生。
-                        <br> 堕落了。
+                        <br> 高考加油。
                         <br> 奋起。
                     </p>
                 </section>
