--- a/index.html
+++ b/index.html
@@ -17,116 +17,13 @@
 </head>
 
 <body>
-    <!-- Loading hover -->
-    <div class="loading">
-        <div class="spinner">
-            <div class="rect1"></div>
-            <div class="rect2"></div>
-            <div class="rect3"></div>
-            <div class="rect4"></div>
-            <div class="rect5"></div>
-        </div>
-    </div>
-
-    <!-- Main box -->
-    <main>
-        <div class="content">
-            <div class="left">
-                <div class="avatar">
-                    <img src="chx/assets/img/logo.jpg">
-                </div>
-                <ul class="menu">
-                    <li>
-                        <a goto="#home">首页</a>
-                    </li>
-                    <li>
-                        <a goto="#archives">活动</a>
-                    </li>
-                    <li>
-                        <a goto="#contact">联系我</a>
-                    </li>
-                    <li>
-                        <a goto="#donate">捐赠</a>
-                    </li>
-                </ul>
-                <div class="copyright">
-                    Made with
-                    <i class="fa fa-heart"></i> by
-                    <br>
-                    <a href="index.html" target="_blank">CHX</a>
-                </div>
-            </div>
-            <div class="right">
-                <section id="home" class="active">
-                    <h1>CHX</h1>
-                    <p>
-                        我是CHX。
-                        <br> 一个高中生。
-                        <br> 高考加油。
-                        <br> 奋起。
-                    </p>
-                </section>
-                <section id="archives">
-                    <h1>近期文章</h1>
-                    <p>
-                        窗前明月光，
-                        <br> 疑是地上霜。
-                        <br> 举头望明月，
-                        <br> 低头思故乡。
-                    </p>
-                </section>
-                <section id="contact">
+   <section id="contact">
                     <h1>联系方式</h1>
                     <div class="items">
-                        <a href="https://chenhexi.wodemo.net" target="_blank">
+                        <a href="https://chenhexi.gitee.io/myweb" target="_blank">
                             <i class="fa fa-home"></i>
-                            <span>Blog</span>
-                        </a>
-                        <a href="https://chenhexi.wodemo.net" target="_blank">
-                            <i class="fa fa-weibo"></i>
-                            <span>Weibo(没有)</span>
-                        </a>
-                        <a href="http://wpa.qq.com/msgrd?v=3&uin=3229098092&site=qq&menu=yes" target="_blank">
-                            <i class="fa fa-google-plus"></i>
-                            <span>QQ</span>
-                        </a>
-                        <a href="https://github.com/EnderCHX" target="_blank">
-                            <i class="fa fa-github"></i>
-                            <span>GitHub</span>
-                        </a>
-                        <a href="enderchx@yeah.net" target="_blank">
-                            <i class="fa fa-envelope"></i>
-                            <span>E-Mail</span>
-                        </a>
-                    </div>
+                            <span>点击前往</span>
+			    </a>
                 </section>
-                <section id="donate">
-                    <h1>捐赠</h1>
-                    <div class="donate-img-box">
-                        <img src="chx/assets/img/WeChat.png">
-                        <img src="chx/assets/img/AliPay.png">
-                    </div>
-<!--                     <p>
-                        Bitcoin: 32VRHdCR1nSsKG5aXi4MZBrvTwH8dvHFm4
-                        <br>PayPal:
-                        <a href="https://paypal.me/lwl12" target="_blank">https://paypal.me/lwl12</a>
-                    </p> -->
-                </section>
-            </div>
-        </div>
-
-        <footer>
-            <p id="hitokoto">Loading...</p>
-            <div class="copyright-mobile">
-                Made with
-                <i class="fa fa-heart"></i> by
-                <a href="index.html" target="_blank">CHX</a>
-            </div>
-        </footer>
-    </main>
-
-    <!-- Some scripts -->
-    <script src="cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="chx/assets/js/main.js"></script>
 </body>
 </html>
