--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
    <section id="contact">
-                    <h1>联系方式</h1>
+                    <h1>个人主页</h1>
                     <div class="items">
                         <a href="https://chenhexi.gitee.io/myweb" target="_blank">
                             <i class="fa fa-home"></i>
