--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
+<head>
+	<title>个人主页</title>
+    <link href="chx/assets/css/main.css" rel="stylesheet">
+	<link rel="shortcut icon" href="chx/assets/img/icon.jpg" type="image/x-icon" />
+	</head>
 
 <body>
    <section id="contact">
@@ -10,5 +15,13 @@
                             <span>点击前往</span>
 			    </a>
                 </section>
+	    <footer>
+            <p id="hitokoto">Loading...</p>
+            <div class="copyright-mobile">
+                Made with
+                <i class="fa fa-heart"></i> by
+                <a href="https://chenhexi.gitee.io/myweb/" target="_blank">CHX</a>
+            </div>
+        </footer>
 </body>
 </html>
