--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
-<!DOCTYPE html>
-<html lang="zh-cmn-Hans">
+<html>
 <head>
-	<title>个人主页</title>
-	<link rel="shortcut icon" href="chx/assets/img/icon.jpg" type="image/x-icon" />
-	</head>
-
+<title>个人主页</title>
+<meta http-equiv="Content-Language" content="zh-CN">
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
+<meta http-equiv="refresh" content="0.2;url=https://chenhexi.gitee.io/myweb/">
+<link rel="shortcut icon" href="chx/assets/img/icon.jpg" type="image/x-icon" />
+</head>
 <body>
-   <section id="contact">
-                    <h1>个人主页</h1>
-                    <div class="items">
-                        <a href="https://chenhexi.gitee.io/myweb" target="_blank">
-                            <i class="fa fa-home"></i>
-                            <span>点击前往</span>
-			    </a>
-                </section>
-	    <footer>
-            <p id="hitokoto">Loading...</p>
-            <div class="copyright-mobile">
-                Made with
-                <i class="fa fa-heart"></i> by
-                <a href="https://chenhexi.gitee.io/myweb/" target="_blank">CHX</a>
-            </div>
-        </footer>
 </body>
 </html>
