--- a/index.html
+++ b/index.html
@@ -146,6 +146,6 @@
     <script src="https://www.layuicdn.com/layer/layer.js"></script>
     
     <!--<script src="https://music.clwl.online/Player/player.min.js" id="SinKingMusic" key="1"></script>-->
-     <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="159792137075" m="1"></script>
+    <!-- <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="159792137075" m="1"></script>-->
 </body>
 </html>
