--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <br> 一个高中生。
                         <br> 高考加油。
                         <br> 奋起。
-                        <br>本页推荐使用电脑版UA
+                        <br><a href="https://minecraftpe-mods.com/" target="_blank"><span>免费我的世界国际版</span>
                     </p>
                 </section>
                 <section id="archives">
