--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <h1>CHX</h1>
                     <p>
                         <br><a href="https://minecraftpe-mods.com/" target="_blank"><span>免费我的世界国际版</span>
+                        <br><a href="https://classic.minecraft.net/" target="_blank"><span>我的世界网页版</span>
                     </p>
                 </section>
                 <section id="archives">
