--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <span>更新日志</span>
                         </a>
                     <div class="items">
-                        <a href="https://chx.lanzous.com/u/chx3229098092" target="_blank">
+                        <a href="https://chx.lanzoui.com/u/chx3229098092" target="_blank">
                             <i class="fa fa-heart"></i>
                             <span>蓝奏云</span>
                         </a>
