--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <section id="home" class="active">
                     <h1>CHX</h1>
                     <p>
+                        <br><h1>推荐使用电脑UA查看</h1>
                         <br><a href="https://minecraftpe-mods.com/" target="_blank"><span>免费我的世界国际版</span>
                         <br><a href="https://classic.minecraft.net/" target="_blank"><span>我的世界网页版</span>
                     </p>
