--- a/index.html
+++ b/index.html
@@ -145,5 +145,6 @@
     
     <!--<script src="https://music.clwl.online/Player/player.min.js" id="SinKingMusic" key="1"></script>-->
     <!-- <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="159792137075" m="1"></script>-->
+<a href="https://icp.gov.moe/?keyword=20210928" target="_blank">萌ICP备20210928号</a>
 </body>
 </html>
