--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                         <br><span>推荐使用电脑UA查看</span>
                         <br><a href="https://minecraftpe-mods.com/" target="_blank"><span>免费我的世界国际版</span>
                         <br><a href="https://classic.minecraft.net/" target="_blank"><span>我的世界网页版</span>
+			<br><a href="https://icp.gov.moe/?keyword=20210928" target="_blank">萌ICP备20210928号</a>
                     </p>
                 </section>
                 <section id="archives">
@@ -145,6 +146,6 @@
     
     <!--<script src="https://music.clwl.online/Player/player.min.js" id="SinKingMusic" key="1"></script>-->
     <!-- <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="159792137075" m="1"></script>-->
-<a href="https://icp.gov.moe/?keyword=20210928" target="_blank">萌ICP备20210928号</a>
+
 </body>
 </html>
