--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 <section id="contact">
                     <h1>联系方式</h1>
                     <div class="items">
-                        <a href="https://chenhexi.wodemo.net" target="_blank">
+                        <a href="https://chxmc.com" target="_blank">
                             <i class="fa fa-home"></i>
                             <span>Blog</span>
                         </a>
-                        <a href="https://chenhexi.wodemo.net" target="_blank">
+                        <a href="https://chxmc.com" target="_blank">
                             <i class="fa fa-weibo"></i>
                             <span>Weibo(没有)</span>
                         </a>
