--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                     <h1>CHX</h1>
                     <p>
                         <br><span>推荐使用电脑UA查看</span>
-                        <br><a href="https://minecraftpe-mods.com/" target="_blank"><span>免费我的世界国际版</span>
-                        <br><a href="https://classic.minecraft.net/" target="_blank"><span>我的世界网页版</span>
+                        
+                        <br><a href="http://mc.chxmc.com/" target="_blank"><span>我的世界网页版服务器</span>
+			<br><a href="https://minecraftpe-mods.com/" target="_blank"><span>免费我的世界国际版</span>
 			<br><a href="https://icp.gov.moe/?keyword=20226520" target="_blank">萌ICP备20226520号</a>
                     </p>
                 </section>
