--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="HandheldFriendly" content="true">
-    <title>个人主页</title>
+    <title>个人主页hrbeu.top</title>
     <link href="cdn.bootcss.com/minireset.css/0.0.2/minireset.min.css" rel="stylesheet">
     <link href="chx/assets/css/main.css" rel="stylesheet">
 	<link rel="shortcut icon" href="chx/assets/img/icon.jpg" type="image/x-icon" />
